<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fission.sqlitedatabase.MainActivity">
    <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"/>
    <EditText
        android:id="@+id/phonenumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:hint="@string/phonenumber"/>
    <EditText
        android:id="@+id/branch"
        android:layout_width="match_parent"
        android:layout_below="@id/phonenumber"
        android:layout_height="wrap_content"
        android:hint="@string/branch"/>
    <Button
        android:id="@+id/Insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/branch"
        android:text="@string/insert"/>
    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/branch"
        android:layout_alignParentRight="true"
        android:text="@string/delete"/>
    <Button
        android:id="@+id/showone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Insert"
        android:text="@string/showone"/>
    <Button
        android:id="@+id/showall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Insert"
        android:layout_alignParentRight="true"
        android:text="@string/show_all"/>
</RelativeLayout>
